--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <li>HTML Structure</li>
     <li>CSS Basics</li>
     <li>Styling Elements</li>
+    <li>Adding Image</li>
+    <li>CSS Selectors</li>
+  <li>Color Properties</li>
+  <li>Font Styling</li>
+  <li>Box Model</li>
+  <li>Pseudo-elements</li>
+  <li>Border Properties</li>
+  <li>Opacity and Transparency</li>
+  <li>Z-index for Layering Elements</li>
 </ul>
 <footer> Created by Maverik Leong</footer>
     <!-- Students will add content here -->
