--- a/index.html
+++ b/index.html
@@ -1,35 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Lab 2 - Getting Started with CSS </title>
-    <!-- Students will add the link tag here -->
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Your Name - Resume</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Welcome to CSS Styling</h1>
-    <h2>My CSS Journey</h2>
-    <p>This is my first attempt at using CSS to style a web page.</p>
-    <img src="sample-image.jpg" alt="Sample Image">
 
-    <h3>What I've Learned:</h3>
-<ul>
-    <li>HTML Structure</li>
-    <li>CSS Basics</li>
-    <li>Styling Elements</li>
-    <li>Adding Image</li>
-    <li>CSS Selectors</li>
-  <li>Color Properties</li>
-  <li>Font Styling</li>
-  <li>Box Model</li>
-  <li>Pseudo-elements</li>
-  <li>Border Properties</li>
-  <li>Opacity and Transparency</li>
-  <li>Z-index for Layering Elements</li>
-</ul>
-<footer> Created by Maverik Leong</footer>
-    <!-- Students will add content here -->
-     
+  <header>
+    <img src="IMG51630144.jpeg" alt="Professional headshot of Your Name" />
+    <h1>Maverik Leong</h1>
+    <p>Web Developer | Designer | Problem Solver</p>
+    <nav>
+      <a href="maverik@uoregon.edu" title="Email me">maverik@uoregon.edu</a> |
+      <a href="tel:+1234567890" title="Call me">+1 (808)937-2057</a>
+      <a href="https://github.com/xMaverik/MaverikCS110" title="github">https://github.com/xMaverik/MaverikCS110</a>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <h2>About Me</h2>
+      <p>I am born and raised on the big island of hawaii, I moved to Oregon this year and am a freshamn attending UofO. I’m a passionate web developer with a focus on clean code, user experience, and responsive design. I enjoy solving problems and creating modern, accessible websites.</p>
+    </section>
+
+    <section id="skills">
+      <h2>Skills</h2>
+      <div class="flex-container">
+        <div class="flex-item">
+          <h3>Technical Skills</h3>
+          <ul class="skills-list">
+            <li>HTML5</li>
+            <li>CSS3</li>
+          </ul>
+        </div>
+        <div class="flex-item">
+          <h3>Soft Skills</h3>
+          <ul class="skills-list">
+            <li>Team Collaboration</li>
+            <li>Time Management</li>
+            <li>Adaptability</li>
+            <li>Critical Thinking</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section id="projects">
+      <h2>Projects & Achievements</h2>
+      <ol>
+        <li>Lab 1</li>
+        <li>Lab 2</li>
+        <li>Project 1</li>
+      </ol>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Maverik Leong. All rights reserved.</p>
+  </footer>
+
 </body>
 </html>
